# qt_cmake

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.qml  plot_data_model.cpp  plot_data_model.h
